Fixed bug with overflow in orange theme

--- a/layouts/default/global.css
+++ b/layouts/default/global.css
@@ -731,6 +731,7 @@ div.googlemap p.exhibitors-more,
 
 #content article {
 	clear: both;
+	overflow: auto;
 }
 
 /* #content.evensplit article.page {
